genius idea for popovers and race evnets ja

--- a/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
@@ -14,10 +14,10 @@
                 <MudNumericField T="int" @bind-Value="model.WearMin" Label="WearMin" Class="field-sm" />
             </MudStack>
         </MudForm>
-        <MudPaper Height="100px">
-            <MudText Typo="Typo.h6">Preview</MudText>
-            <div style="background-color:@(model.Colour); color:@(model.Accent)">
-                @model.Name
+        <MudPaper Height="100px" Class="d-flex flex-column">
+            <MudText Typo="Typo.h6" Class="flex-initial">Preview</MudText>
+            <div class="flex-auto d-flex justify-center align-center" style="background-color:@(model.Colour); color:@(model.Accent)">
+                <MudText Class="ma-auto">@model.Name</MudText>
             </div>
         </MudPaper>
     </DialogContent>
