--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -7,121 +7,137 @@
 
 <PageTitle>Race</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False">
-    @if (!loading)
-    {
-        <MudTable Items="@Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenBy(e => e.Position)" Dense="true" Style="width: 1600px" id="race-display-elem">
-            <ToolBarContent>
-                <MudStack Row="true" Justify="Justify.SpaceBetween" Style="width:100%">
-                    <MudText>
-                        <MudIcon Icon="@(Model.Weather.GetWeatherIcon())" />
-                        <CountryFlag Code="@Model.Country" />
-                        @Model.Name - ROUND @Model.Round
-                    </MudText>
+@if (!loading)
+{
+    <MudTable Items="@Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenBy(e => e.Position)" Dense="true" id="race-display-elem">
+        <ToolBarContent>
+            <MudStack Row="true" Justify="Justify.SpaceBetween" Style="width:100%">
+                <MudText>
+                    <MudIcon Icon="@(Model.Weather.GetWeatherIcon())" />
+                    <CountryFlag Code="@Model.Country" />
+                    @Model.Name - ROUND @Model.Round
+                </MudText>
 
-                    <MudChip Color="Color.Dark" DisableRipple="true" Label="true">@(racedLaps) / @(totalLaps)</MudChip>
+                <MudChip Color="Color.Dark" DisableRipple="true" Label="true">@(racedLaps) / @(totalLaps)</MudChip>
 
-                        <div>
-                            @if (calculated >= calculationCount)
-                        {
-                            <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-                        }
-                        else
-                        {
-                            @* The following seems a bit too clumsy  to implement, so it isn't implemented
-                            <MudNumericField T="int" @bind-Value="calculationsPerAdvance" Label="Laps to advance x10" Class="field-md" />
-                            *@
-                            <MudButton Color="Color.Tertiary" Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
-                        }
-                    </div>
-                </MudStack>
-            </ToolBarContent>
-            <ColGroup>
-                <col style="width: 15px" />
-                <col style="width: 40px" />
-                <col style="width: 220px" />
-                <col style="width: 30px" />
-                <col style="width: 220px" />
-                <col style="width: 30px" />
-                <col style="width: 50px" />
-                <col style="width: 50px" />
-                <col style="width: 75px" />
-                <col style="width: 150px" />
-                <col />
-            </ColGroup>
-            <HeaderContent>
-                <MudTh>#</MudTh>
-                <MudTh>Grid</MudTh>
-                <MudTh>Name</MudTh>
-                <MudTh>No</MudTh>
-                <MudTh>Team</MudTh>
-                <MudTh>PWR</MudTh>
-                <MudTh>TYRE</MudTh>
-                <MudTh>Score</MudTh>
-                <MudTh>Status</MudTh>
-                <MudTh>Events</MudTh>
-                <MudTh>Visual</MudTh>
-            </HeaderContent>
-            <RowTemplate>
-                <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
-                    @context.Position
-                </MudTd>
-                <MudTd>
-                    <GridChange Change="@context.GridChange" />
-                </MudTd>
-                <MudTd>
-                    <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
-                    @context.FullName
+                    <div>
+                        @if (calculated >= calculationCount)
+                    {
+                        <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
+                    }
+                    else
+                    {
+                        @* The following seems a bit too clumsy  to implement, so it isn't implemented
+                        <MudNumericField T="int" @bind-Value="calculationsPerAdvance" Label="Laps to advance x10" Class="field-md" />
+                        *@
+                        <MudButton Color="Color.Tertiary" Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
+                    }
+                </div>
+            </MudStack>
+        </ToolBarContent>
+        <ColGroup>
+            <col style="width: 15px" />
+            <col style="width: 40px" />
+            <col style="width: 220px" />
+            <col style="width: 30px" />
+            <col style="width: 220px" />
+            <col style="width: 30px" />
+            <col style="width: 50px" />
+            <col style="width: 50px" />
+            <col style="width: 75px" />
+            <col style="width: 150px" />
+            <col />
+        </ColGroup>
+        <HeaderContent>
+            <MudTh>#</MudTh>
+            <MudTh>Grid</MudTh>
+            <MudTh>Name</MudTh>
+            <MudTh>No</MudTh>
+            <MudTh>Team</MudTh>
+            <MudTh>PWR</MudTh>
+            <MudTh>TYRE</MudTh>
+            <MudTh>Score</MudTh>
+            <MudTh>Status</MudTh>
+            <MudTh>Events</MudTh>
+            <MudTh>Visual</MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
+                @context.Position
+            </MudTd>
+            <MudTd>
+                <GridChange Change="@context.GridChange" />
+            </MudTd>
+            <MudTd>
+                <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
+                @context.FullName
+                <span>
                     @if (context.HasFastestLap)
                     {
                         <MudIcon Icon="@Icons.Material.Filled.Timer" Size="Size.Small" Style="color:mediumpurple" />
                     }
-                </MudTd>
-                <MudTd>@context.Number</MudTd>
-                <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
-                    @context.TeamName
-                </MudTd>
-                <MudTd>@context.Power</MudTd>
-                <MudTd>
-                    <span class="tyre" style="border-color:@(context.CurrentTyre.Colour)">
-                        @context.TyreLife
-                    </span>
-                </MudTd>
-                <MudTd>@context.LapSum</MudTd>
-                <MudTd>
-                    @if (context.Status == RaceStatus.Racing)
+                </span>
+            </MudTd>
+            <MudTd>@context.Number</MudTd>
+            <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
+                @context.TeamName
+            </MudTd>
+            <MudTd>@context.Power</MudTd>
+            <MudTd>
+                <span class="tyre" style="border-color:@(context.CurrentTyre.Colour)">
+                    @context.TyreLife
+                </span>
+            </MudTd>
+            <MudTd>@context.LapSum</MudTd>
+            <MudTd>
+                @if (context.Status == RaceStatus.Racing)
+                {
+                    <MudText Typo="Typo.body2">+@(context.TimedGap(Model.GapMarge))</MudText>
+                }
+                else
+                {
+                    <MudText Typo="Typo.body2" Color="Color.Error">@context.Incident</MudText>
+                }
+            </MudTd>
+            <MudTd>
+                @foreach (var lapEvent in context.LapResults)
+                {
+                    @foreach (var raceEvent in lapEvent.ListOfDubiousEvents().Select((element, index) => new { index, element }))
                     {
-                        <MudText Typo="Typo.body2">+@(context.TimedGap(Model.GapMarge))</MudText>
+                        <MudText Typo="Typo.body2">Lap @(lapEvent.Order): @(raceEvent.ToString())</MudText>
                     }
-                    else
-                    {
-                        <MudText Typo="Typo.body2" Color="Color.Error">@context.Incident</MudText>
-                    }
-                </MudTd>
-                <MudTd>
-                    @foreach (var lapEvent in context.LapResults)
-                    {
-                        @foreach (var raceEvent in lapEvent.RacerEvents.GetFlagged().Where(e => e.ToString() != "Unknown" && e.ToString() != "Racing"))
+                }
+            </MudTd>
+            <MudTd>
+                <MudStack Justify="Justify.SpaceAround" AlignItems="AlignItems.Stretch">
+                    <div style="width:100%">
+                        @foreach (var lapEvent in context.LapResults)
                         {
-                            <MudText Typo="Typo.body2">Lap @(lapEvent.Order): @(raceEvent.ToString())</MudText>
+                            @foreach (var raceEvent in lapEvent.ListOfDubiousEvents().Select((element, index) => new { index, element }))
+                            {
+                                <span>
+                                    <MudPopover OverflowBehavior="OverflowBehavior.FlipNever" Open="true" AnchorOrigin="Origin.TopLeft" TransformOrigin="Origin.BottomRight" Class="pa-2" Style="@SignalEventStyle(lapEvent.Order, raceEvent.index)">
+
+                                    </MudPopover>
+                                </span>
+                            }
                         }
-                    }
-                </MudTd>
-                <MudTd>
+                    </div>
+                    <MudProgressLinear Value="@racedLaps" Min="0" Max="@totalLaps" Size="Size.Medium" Class="my-2" />
                     <MudProgressLinear Value="@context.LapSum" Min="0" Max="@highestScore" Size="Size.Medium" Color="Color.Secondary" Class="my-2" />
-                </MudTd>
-            </RowTemplate>
-            <FooterContent>
-                <MudTd colspan="20">
-                    <MudStack Row="true" Justify="Justify.SpaceBetween">
-                        <MudIconButton Icon="@Icons.Material.Outlined.Image" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowImage" />
-                        <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowGraph" />
-                    </MudStack>
-                </MudTd>
-            </FooterContent>
-        </MudTable>
-    }
-</MudContainer>
+                </MudStack>
+            </MudTd>
+        </RowTemplate>
+        <FooterContent>
+            <MudTd colspan="20">
+                <MudStack Row="true" Justify="Justify.SpaceBetween">
+                    <MudIconButton Icon="@Icons.Material.Outlined.Image" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowImage" />
+                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowGraph" />
+                </MudStack>
+            </MudTd>
+        </FooterContent>
+    </MudTable>
+}
 
 @code {
     [Parameter] public long RaceId { get; set; }
@@ -161,6 +177,33 @@
         totalLaps = NumberHelper.CalcLapCount(Model.RaceLength, Model.TrackLength);
 
         loading = false;
+    }
+
+    string SignalEventStyle(int lap, int index)
+    {
+        int lapPercentage = ((lap * 10) * totalLaps) / 100;
+        return $"margin-left:{lapPercentage}%;margin-right:-{(index * 2)}px;z-index:{(1 + index)}";
+    }
+
+    string SignalIcon(string raceEvent)
+    {
+        switch (raceEvent)
+        {
+            case "DriverDnf":
+                break;
+            case "CarDnf":
+                break;
+            case "EngineDnf":
+                break;
+            case "Mistake":
+                break;
+            case "Pitstop":
+                break;
+            case "Swap":
+                break;
+        }
+
+        return "";
     }
 
     void Advance()
@@ -203,6 +246,13 @@
                             break;
                         }
                     }
+
+                    /*var mistake = false;
+                    for (int i = 0; i < settings.MistakeAmountRolls; i++)
+                    {// Determines if the racing driver made a mistake during it's respective stint
+                        mistake = DidReliabilityFail(modEffect.DriverReliability);
+                        if (!mistake) { break; }
+                    }*/
 
                     // Strategy
                     lapValue += HandleStrategy(driver, lapScore);
