--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -62,7 +62,7 @@
 
     [Parameter] public Race? Race { get; set; }
     [Parameter] public List<Track> Tracks { get; set; } = new();
-    [Parameter] public int SeasonId { get; set; }
+    [Parameter] public long SeasonId { get; set; }
     [Parameter] public int IncomingRound { get; set; }
     [Parameter] public int DefaultRaceLength { get; set; }
 
