--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -5,11 +5,11 @@
 <PageTitle>Components</PageTitle>
 
 <MudContainer>
-    <MudGrid>
-        <MudItem xs="9">
-            <MudPaper Class="mud-height-full">
-                @if (PartsPerDriver != null)
-                {
+    @if (PartsPerDriver != null)
+    {
+        <MudGrid>
+            <MudItem xs="9">
+                <MudPaper Class="mud-height-full">
                     <MudTable Items="@PartsPerDriver">
                         <ToolBarContent>
                             <MudText Typo="Typo.h4">Components</MudText>
@@ -49,20 +49,28 @@
                             <MudTd>-</MudTd>
                         </FooterContent>
                     </MudTable>
-                }
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="3">
-            <MudPaper Class="pa-4 mud-height-full">
-                <MudText Typo="Typo.h4">Other</MudText>
-                <MudText Typo="Typo.body2">
-                    ... Something related to this? I had an idea... but what?
-                    Optionally make the kind of incidents and such settable, including the penalties.
-                    Furthermore I suspect the upcoming penalty's and such were what I wanted to put here.
-                </MudText>
-            </MudPaper>
-        </MudItem>
-    </MudGrid>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="3">
+                <MudPaper Class="pa-4 mud-height-full">
+                    <MudText Typo="Typo.h4">Penalties</MudText>
+                    <MudList>
+                        @foreach (var driver in PartsPerDriver.Where(e => e.GivenPenalties?.Any() == true))
+                        {
+                            @foreach (var penalty in driver.GivenPenalties)
+                            {
+                                <MudListItem>
+                                    <MudText Typo="Typo.body2">Round @penalty.Round</MudText>
+                                    <MudText>@driver.Name</MudText>
+                                    <MudText>+@(penalty.Punishment)</MudText>
+                                    </MudListItem>
+                            }
+                        }
+                    </MudList>
+                </MudPaper>
+            </MudItem>
+        </MudGrid>
+    }
 </MudContainer>
 
 @code {
