--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -202,7 +202,7 @@
         {
             new BreadcrumbItem("Home", href: ""),
             new BreadcrumbItem("Seasons", href: "seasons"),
-            new BreadcrumbItem("Overview", href: $"overview/{SeasonId}"),
+            new BreadcrumbItem("Overview", href: $"overview/{SeasonId}", disabled: true),
         });
 
         _activeTabIndex = TabIndex;
