--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager Nav
 @inject LeagueService LeagueService
 @inject SeasonService SeasonService
+@inject BreadcrumbProvider _bread
 @inject IDialogService DialogService
 
 <PageTitle>Seasons</PageTitle>
@@ -52,12 +53,18 @@
 </MudContainer>
 
 @code {
-    private List<Season> SeasonData;
-    private List<League> LeagueData;
-    private List<SeasonListModel> SeasonList;
+    List<Season> SeasonData;
+    List<League> LeagueData;
+    List<SeasonListModel> SeasonList;
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: ""),
+            new BreadcrumbItem("Seasons", href: "seasons", disabled: true),
+        });
+
         SeasonData = await SeasonService.GetSeasons();
         LeagueData = await LeagueService.GetLeagues();
 
